[package]
name = "my_sub"
version = "0.1.0"
authors = ["Daniele Nicolazzo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams", branch  = "develop"}
iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "iota-1.0" }